--- a/getting-started/setup-introduction/prerequisites-requirements.mdx
+++ b/getting-started/setup-introduction/prerequisites-requirements.mdx
@@ -1,110 +1,186 @@
 ---
-title: "Prerequisites and System Requirements"
-description: "Outlines the necessary compilers, supported platforms, and minimum C++ standards required for GoogleTest and GoogleMock. Provides guidance on ensuring your environment is ready for installation."
+title: "Prerequisites & System Requirements"
+description: "Find out what you need before you begin: supported compilers, minimum C++ standards, platform constraints, and tooling required to successfully use GoogleTest. This page ensures your environment is ready and that you won't encounter friction during installation."
 ---
 
-# Prerequisites and System Requirements
+# Prerequisites & System Requirements
 
-This page details the essential compiler support, platforms, and C++ standards you need to have in place to build and use GoogleTest and GoogleMock successfully. Ensuring your environment meets these prerequisites will help you avoid build or runtime issues when integrating and running your first tests.
+Prepare your development environment for smooth integration with GoogleTest by ensuring the following compilers, C++ standards, platform constraints, and tooling are in place. Setting up correctly upfront will save you time and prevent frustrating installation or runtime issues.
 
 ---
 
 ## 1. Supported Compilers
 
-GoogleTest and GoogleMock require modern C++17-compatible compilers. The following compilers have proven support:
+GoogleTest requires a compiler with **full support for the C++17 standard or newer**. The following compilers are supported:
 
-- **GCC 7.1** and above
-- **Clang 5.0** and above
-- **MSVC 2017** (Visual Studio 2017) and above
+- **GCC** (GNU Compiler Collection) version 7.0 and above
+- **Clang** 5 and above
+- **MSVC** (Microsoft Visual C++) 2017 Update 3 or later
+- **Intel LLVM** compatible with C++17
 
-> Note: Even if your compiler claims support for C++17, always verify that it does so without major bugs by testing a minimal C++17 project.
-
-## 2. Supported Platforms
-
-GoogleTest and GoogleMock are designed to be portable across major operating systems and platforms:
-
-- **Windows** (desktop and server editions)
-- **Linux** distributions
-- **macOS**
-- Embedded platforms that support C++17
-
-The framework avoids platform-specific calls, relying on the C++ standard library and cross-platform abstractions wherever possible.
-
-## 3. Minimum C++ Standard
-
-Both GoogleTest and GoogleMock require your project to be built with **at least C++17** support enabled. This ensures access to language features and library enhancements needed for both frameworks to compile and function correctly.
-
-### Enabling C++17
-
-Most modern build systems and compilers support a flag to specify the C++ standard. For example:
-
-- **GCC and Clang:** Use `-std=c++17`
-- **MSVC:** Use `/std:c++17`
-
-Ensure that this flag is set consistently across your build process.
-
-## 4. Additional Environment Considerations
-
-- **Threading Support:** GoogleTest and GoogleMock may utilize threading features. Make sure your platform and compiler support `pthread` on Unix-like systems or native threading on Windows.
-
-- **Build Tools:**
-  - `cmake` or `bazel` are supported build systems that facilitate integration.
-  - Manual builds using `make` or other tools require your environment to be set up accordingly.
-
-- **Linking Dependencies:**
-  - When using shared libraries on Windows, ensure the runtime libraries are consistent to avoid linking conflicts.
-  - On Unix, linking to pthreads (`-lpthread`) might be necessary.
-
-## 5. Validation Tips
-
-After configuring your environment, verify you can build the test binaries without errors:
-
-```shell
-# Example with CMake
-mkdir build
-cd build
-cmake -DCMAKE_CXX_STANDARD=17 ..
-cmake --build .
-```
-
-Running the test suite (`RUN_ALL_TESTS()`) should complete without unexpected failures, indicating your environment is properly set up.
-
-## 6. Common Pitfalls
-
-- Forgetting to set the C++ standard to C++17 or above will result in compile errors.
-- Mixing runtime library types, especially on Windows (static vs dynamic CRT), can cause linking failures.
-- Using outdated compiler versions lacking proper C++17 implementation will lead to subtle compilation or runtime errors.
+Any compiler not meeting these minimum requirements will not successfully compile GoogleTest.
 
 <Tip>
-Always ensure your compiler is up-to-date and that all build and linking flags are consistent. Mismatched configurations are a frequent cause of build issues.
-</Tip>
-
-<Tip>
-Utilize `NiceMock` or `StrictMock` wrappers judiciously to control warning and error reporting during tests, adapting to your development or CI environment needs.
+Always verify your compiler version before attempting to build GoogleTest to avoid unexpected errors.
 </Tip>
 
 ---
 
-## Summary
+## 2. Minimum C++ Standard: C++17
 
-This page establishes the foundation for a successful GoogleTest and GoogleMock setup by clarifying supported compilers, platforms, and required C++ standards.
+GoogleTest strictly requires an environment that supports the **C++17 standard or newer**. It uses language features and standard library components introduced in this standard.
+
+To ensure this:
+
+- When using **CMake**, set the following in your top-level `CMakeLists.txt`:
+
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  ```
+
+- When building manually or with other build systems, ensure that your compiler flags include appropriate options, e.g., `-std=c++17` for GCC and Clang, or specify the correct language standard in your IDE settings.
+
+<Warning>
+Using C++ standards older than C++17 will lead to build-time failures or undefined behavior.
+</Warning>
+
+---
+
+## 3. Platform Constraints
+
+GoogleTest supports the primary desktop platforms:
+
+- **Linux** (various distributions)
+- **Windows** (desktop versions)
+- **macOS**
+
+It detects the platform automatically and adapts accordingly. Note the following considerations:
+
+- **Threads and Synchronization**: GoogleTest is thread-safe on platforms with pthread support.
+- **Exceptions**: It's recommended to compile with exceptions enabled for full feature support, although GoogleTest can be used in exception-free builds.
+
+<Note>
+Some specialized or embedded platforms are not supported due to lack of thread libraries or file system support.
+</Note>
+
+---
+
+## 4. Tooling Requirements
+
+You will need the following tools installed and configured to successfully use GoogleTest:
+
+- **Build Tools**:
+  - **CMake** (version 3.14 or higher recommended) for cross-platform build configuration.
+  - Native toolchain matching your platform (e.g., GNU Make, MSBuild, Ninja).
+
+- **Git** (optional but recommended): To clone GoogleTest source directly if building from source.
+
+- **Pkg-config** (especially on Linux/macOS): Can help discover compiler and linker flags.
+
+- **System Libraries**:
+  - Standard C++ library with C++17 support.
+  - pthreads (POSIX threads) for multi-threading support on Linux/macOS.
+
+---
+
+## 5. Environment Tuning Macros (Optional)
+
+GoogleTest supports some user-tweakable macros to adjust or force environment-specific settings during compilation. These are advanced configurations, typically set via compiler flags.
+
+Common macros include:
+
+- `GTEST_HAS_PTHREAD=1` or `0` to force enabling or disabling pthread support.
+- `GTEST_CREATE_SHARED_LIBRARY=1` when compiling GoogleTest as a shared library.
+- `GTEST_LINKED_AS_SHARED_LIBRARY=1` when linking tests against a shared GoogleTest.
+
+Unless you have specialized requirements, the defaults detected automatically by GoogleTest suffice.
+
+<Tip>
+Refer to [`gtest-port.h`](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h) for a complete list of macros.
+</Tip>
+
+---
+
+## 6. Key Compiler Flags and Configuration
+
+GoogleTest’s build scripts and CMake files set compiler flags optimized for various compilers to ensure:
+
+- Strict warnings (`-W4` for MSVC, `-Wall -Wshadow` for GCC/Clang).
+- C++17 language standard compliance.
+- Runtime library linking consistency (static vs. dynamic linking).
+
+If you build GoogleTest manually, ensure your compiler flags match these guidelines.
+
+<Note>
+On Windows, the `gtest_force_shared_crt` CMake option can help resolve runtime library linkage conflicts between GoogleTest and your project.
+</Note>
+
+---
+
+## 7. Verifying Your Environment
+
+Before installing or building GoogleTest, confirm the following:
+
+- Your **compiler is C++17 compliant and is the expected version or newer**.
+- Your **build system supports CMake 3.14+** if using CMake.
+- Your **platform is supported** and pthreads / threading is available if multithreading is needed.
+- The required **tools (git, pkg-config)** are installed if you plan to build from source.
+
+Use the compiler’s version command (e.g., `gcc --version`, `cl.exe`, `clang --version`) and `cmake --version` to check.
+
+---
+
+## Troubleshooting Common Prerequisite Issues
+
+<AccordionGroup title="Common Environment Issues">
+<Accordion title="Compiler Not Supporting C++17">
+If your compiler is too old:
+
+- Update to a supported version.
+- Alternatively, adjust your compiler flags or toolchain to use a newer compiler.
+</Accordion>
+<Accordion title="Missing pthreads on Linux/macOS">
+- Ensure development packages are installed (e.g., `libpthread` or kernel headers).
+- Use the build system’s package finder capabilities (e.g., CMake `find_package(Threads)`).
+</Accordion>
+<Accordion title="Build Tool Versions Too Low">
+- Upgrade CMake to version 3.14 or later.
+- Verify your build environment supports necessary features.
+</Accordion>
+<Accordion title="Linkage Conflicts on Windows">
+- Use CMake's `gtest_force_shared_crt` option to align runtime library linkage.
+- Review your project’s runtime linkage to match GoogleTest's.
+</Accordion>
+</AccordionGroup>
 
 ---
 
 ## Additional Resources
 
-- [Installation (CMake, Bazel, Manual)](/getting-started/setup-introduction/installation-options)
-- [Configuration and Project Setup](/getting-started/setup-introduction/configuration-basics)
-- [Supported Platforms & Build Integration](/overview/integration-and-ecosystem/platforms-integration)
-- [Writing and Running Your First Test](/getting-started/first-experience/writing-first-test)
-- [GoogleTest Primer](overview/getting-started/introduction)
-
-For detailed guidance on mocking and expectations, consult:
-
-- [gMock for Dummies](docs/gmock_for_dummies.md)
-- [Mocking Reference](docs/reference/mocking.md)
-- [gMock Cookbook](docs/gmock_cook_book.md)
+- [GoogleTest Primer](primer.md) – to understand test writing after environment setup.
+- [Installation Instructions](installation-instructions.md) – for building and configuring GoogleTest.
+- [Platform Support and Build Integration](overview/integrations-and-ecosystem/platform-support-and-build-integration.mdx) – detailed platform and tooling compatibility.
 
 ---
 
-By ensuring your environment complies with the prerequisites and system requirements detailed here, you unlock smooth installation and operation of the GoogleTest and GoogleMock testing frameworks.
+# Summary
+
+This page details the essential prerequisites and system requirements needed before setting up GoogleTest. It covers supported compilers, the minimum C++17 standard requirement, platform compatibilities, and essential tooling like CMake and pthreads. Key focus areas include configuring the development environment correctly to ensure a smooth installation and integration process.
+
+**Key Sections:**
+- Supported Compilers
+- Minimum C++ Standard
+- Platform Support
+- Required Tooling
+- Environment Macros & Compiler Flags
+- Verification and Troubleshooting
+
+**Important Links:**
+- [GoogleTest Primer](primer.md)
+- [Installation Instructions](installation-instructions.md)
+- [Platform Support and Build Integration](overview/integrations-and-ecosystem/platform-support-and-build-integration.mdx)
+- [gtest-port.h source](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h)
+
+**Next Steps:**
+Proceed to the [Installation Instructions](installation-instructions.md) page to set up GoogleTest in your environment.
