--- a/getting-started/first-steps-validation/troubleshooting.mdx
+++ b/getting-started/first-steps-validation/troubleshooting.mdx
@@ -1,210 +1,156 @@
 ---
-title: "Troubleshooting & Common Setup Issues"
-description: "Practical advice and solutions for common problems encountered during installation and first usage, such as compiler errors, missing dependencies, or test discovery failures. This page links to useful FAQs and directs users to community support when needed."
+title: "Troubleshooting & Common Issues"
+description: "Overcome frequent obstacles encountered during the initial setup or test execution—diagnose errors, missing dependencies, build failures, and typical misconfigurations. This page arms users with actionable solutions to move past early roadblocks."
 ---
 
-# Troubleshooting & Common Setup Issues
+# Troubleshooting & Common Issues
 
-This page provides practical guidance for resolving common problems you might encounter during the installation, configuration, and initial use of GoogleTest and GoogleMock. If you run into compiler errors, missing dependencies, or test discovery failures, this guide will help you diagnose and fix these issues efficiently.
-
----
-
-## 1. Compiler Errors During Build
-
-Compiler errors can arise from incompatible compilers, missing language standards, or incorrect project setup.
-
-### 1.1 Check Compiler Compatibility
-
-GoogleTest requires a C++17-compliant compiler. Make sure your compiler version supports C++17 features.
-
-- **Verify Compiler Version:** For example, run `g++ --version` or `clang++ --version`.
-- **Supported Compilers:** GCC 7+, Clang 5+, MSVC 2017 Update 15.7 or later.
-
-### 1.2 Confirm Build System Configuration
-
-- Ensure your build tool (CMake, Bazel, etc.) is set to use C++17.
-- For CMake, add this line:
-
-  ```cmake
-  set(CMAKE_CXX_STANDARD 17)
-  set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  ```
-
-- Ensure that both GoogleTest and GoogleMock are properly included and linked.
-
-### 1.3 Resolve Macro Expansion Conflicts
-
-If you include system headers that define common macros (e.g., on Windows), macro redefinitions may cause breaking errors.
-
-- Use the workaround of undefining conflicting macros before including GoogleMock headers:
-
-  ```cpp
-  #ifdef Method
-  #undef Method
-  #endif
-  #include <gmock/gmock.h>
-  ```
-
-- Refer to [gmock-spec-builders_test.cc](https://github.com/google/googletest/blob/main/googlemock/test/gmock-spec-builders_test.cc) for examples addressing this issue.
-
-## 2. Missing Dependencies or Files
-
-### 2.1 Ensure Dependencies Are Installed
-
-- Verify you have installed CMake or Bazel as your build system.
-- Install necessary build tools (make, ninja, Visual Studio build tools, etc.).
-- Confirm your platform's threading libraries and exception support are enabled.
-
-### 2.2 Repository Contents
-
-Make sure you have cloned the complete GoogleTest repository, including the `googletest` and `googlemock` directories.
-
-- The `gmock` subdirectory contains GoogleMock sources.
-- The `googletest` subdirectory contains GoogleTest sources.
-
-### 2.3 Include Paths and Linking
-
-- Add both GoogleMock and GoogleTest include paths in your project.
-- Link against the compiled GoogleTest/GoogleMock libraries.
-
-## 3. Test Discovery Failures
-
-If your tests are not discovered or executed:
-
-### 3.1 Confirm Tests Are Linked
-
-- Ensure your test binaries link with GoogleTest and GoogleMock libraries.
-- Verify the source files defining tests are included and compiled.
-
-### 3.2 Naming and Registration
-
-- Make sure tests use the appropriate `TEST()`, `TEST_F()`, or `TEST_P()` macros.
-- Confirm `testing::InitGoogleMock(&argc, argv);` or `testing::InitGoogleTest(&argc, argv);` is called in `main()` before `RUN_ALL_TESTS()`.
-
-### 3.3 Use Test Listing Options
-
-Run your test executable with:
-
-```bash
-./your_test_binary --gtest_list_tests
-```
-
-This command lists all discovered test cases. If no tests show up, verify your test code setup.
-
-### 3.4 Filtering
-
-Be sure no restrictive filters (e.g., `--gtest_filter`) or environment variables are blocking test execution.
-
-## 4. Common Runtime Issues
-
-### 4.1 Unexpected Mock Function Calls
-
-- Usually caused when calls do not match any `EXPECT_CALL` or when `EXPECT_CALL` expectations are saturated.
-- Run tests with `--gmock_verbose=info` to see trace of mock calls and better understand mismatches.
-- Consider adding "catch-all" expectations with `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to suppress unwanted warnings.
-- Use `NiceMock<T>` to suppress uninteresting call warnings where appropriate.
-
-### 4.2 Uninteresting Call Warnings
-
-These warnings indicate mock methods were called without expectations:
-
-```none
-GMOCK WARNING:
-Uninteresting mock function call - returning default value.
-    Function call: MethodName(...)
-```
-
-- To suppress, add `EXPECT_CALL` with `Times(AnyNumber())` or switch to `NiceMock<T>`.
-- Avoid ignoring genuine bugs by suppressing these warnings blindly.
-
-### 4.3 Leaked Mock Objects
-
-When mocks are allocated on the heap and not deleted, GoogleMock reports leaks:
-
-```
-ERROR: this mock object should be deleted but never is. Its address is @0x#.
-```
-
-- Fix this by ensuring your code deletes mock objects properly.
-- Alternatively, explicitly mark mocks as okay to leak with:
-
-  ```cpp
-  Mock::AllowLeak(mock_object);
-  ```
-
-## 5. Debugging Setup Issues
-
-### 5.1 Increase Verbosity
-
-Run tests with increased verbosity:
-
-```bash
-./your_test_binary --gmock_verbose=info
-```
-
-This shows detailed mock call and expectation matching trace.
-
-### 5.2 Check Stack Trace Depth
-
-If stack traces are too verbose or unhelpful, set:
-
-```bash
-./your_test_binary --gtest_stack_trace_depth=0
-```
-
-Adjust as needed.
-
-### 5.3 Use Scoped Trace for Complex Failures
-
-In test code, use `SCOPED_TRACE()` to add context to failures when tests call helper functions.
-
-## 6. Useful Links and Commands
-
-- [GoogleTest FAQ - Troubleshooting](https://github.com/google/googletest/blob/main/docs/gmock_faq.md)
-- [gMock Cookbook - Common Patterns](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
-- Run tests listing:
-  ```bash
-  ./your_test_binary --gtest_list_tests
-  ```
-- Run tests with verbosity:
-  ```bash
-  ./your_test_binary --gmock_verbose=info
-  ```
+GoogleTest is designed for reliability and ease of use, but initial setup and test execution can encounter frequent obstacles. This guide helps you diagnose and overcome common issues—ranging from build failures and missing dependencies to runtime errors and test misconfigurations—so you can continue your testing workflow smoothly.
 
 ---
 
-## Support and Community
+## 1. Common Installation and Build Issues
 
-If problems persist, please:
+### 1.1 Missing Dependencies or Compiler Issues
+- **Symptom**: Errors about missing headers (e.g., `<gtest/gtest.h>`) or symbol not found.
+- **Solution**:
+  1. Verify your compiler supports C++17 or newer as required by GoogleTest.
+  2. Confirm build tools such as CMake or Bazel are installed and in the system PATH.
+  3. Double-check if GoogleTest sources or libraries are correctly included or linked.
+  4. For build system specifics, refer to the [Platform Support and Build Integration](overview/integrations-and-ecosystem/platform-support-and-build-integration) documentation.
 
-- Check detailed logs and error output.
-- Consult the GoogleTest and GoogleMock issue trackers on GitHub.
-- Join community forums or mailing lists related to GoogleTest for peer support.
+<Tip>
+Always consult the GoogleTest version compatibility matrix with your compiler and platform before installation.
+</Tip>
 
----
+### 1.2 Incorrect Build Configuration
+- **Symptom**: Build fails or tests don't link properly.
+- **Solution**:
+  1. Follow [Installation Instructions](getting-started/setup-introduction/installation-instructions) exactly, ensuring correct CMake or Bazel configuration.
+  2. Use pkg-config if applicable to set compilation and linking flags.
+  3. Verify that `gtest` and `gtest_main` targets or libraries are correctly referenced by your project.
+  4. Clean the build directory and rebuild to prevent stale artifacts.
 
-## Summary
+<Warning>
+Mixing release and debug built libraries can cause cryptic linking errors. Ensure that all GoogleTest components are built with consistent settings.
+</Warning>
 
-This page equips you with step-by-step fixes for compile-time and runtime issues, helps ensure your tests are properly discovered and run, and guides on diagnosing mock-related warnings and errors. Combined with verbosity flags and inspection tools, you can resolve setup issues rapidly and maintain robust, reliable test suites.
+## 2. Test Execution Failures and Runtime Errors
 
----
+### 2.1 Tests Not Running or Being Skipped Unexpectedly
+- **Symptom**: Test executable runs but no tests execute, or some tests are silently skipped.
+- **Solution**:
+  1. Check for disabled tests or test suites prefixed with `DISABLED_`.
+  2. Ensure no accidental misuse of test macros - mismatched `TEST` and `TEST_F` within the same test suite.
+  3. Confirm that your filter flags (`--gtest_filter`) do not exclude all tests.
+  4. Verify environment variables such as `GTEST_SHARD_INDEX` and `GTEST_TOTAL_SHARDS` if using test sharding.
 
-## Troubleshooting Flowchart
+### 2.2 Test Crashes and Death Test Failures
+- **Symptom**: Tests crash, or death tests (`EXPECT_DEATH`/`ASSERT_DEATH`) fail unexpectedly.
+- **Solution**:
+  1. Follow death test style best practices. By default, GoogleTest runs death tests in "threadsafe" mode, safer for multi-threaded environments but slower.
+  2. For legacy or simpler cases, the "fast" style runs death test code immediately after fork.
+  3. Set death test style explicitly using:
 
-```mermaid
-flowchart TD
-  Start["Start: Encounter issue"] --> CheckCompiler["Check compiler compatibility & C++17 setting"]
-  CheckCompiler -->|OK| CheckDependencies["Verify dependencies and repo contents"]
-  CheckCompiler -->|Fail| FixCompiler["Update compiler, set C++17 standard"]
-  FixCompiler --> End["Issue Resolved"]
-  CheckDependencies -->|OK| TestDiscovery["Confirm test discovery"]
-  CheckDependencies -->|Fail| FixDependencies["Install missing tools, fix includes"]
-  FixDependencies --> End
-  TestDiscovery -->|Fail| FixDiscovery["Check test registration, filter settings"]
-  FixDiscovery --> End
-  TestDiscovery -->|OK| RunTests["Run tests and observe errors"]
-  RunTests -->|Mock errors| FixMocking["Check expectations, use --gmock_verbose=info"]
-  RunTests -->|Other errors| OtherFix["Review logs, increase verbosity"]
-  FixMocking --> End
-  OtherFix --> End
+```cpp
+GTEST_FLAG_SET(death_test_style, "threadsafe");
 ```
+  4. Check if multiple threads are running when forking for death tests; if yes, it triggers a warning because forking in a multi-threaded process is dangerous.
+  5. Use the recommended naming convention—test suites involving death tests should have names ending with `DeathTest` to ensure correct ordering.
+  6. Look at stderr outputs from failed death tests for regex mismatches.
+
+<Tip>
+If a death test asserts failure caused by mock object leaks, add `Mock::AllowLeak()` for the involved mocks inside the death test.
+</Tip>
+
+### 2.3 Assertion Failures Not Terminating Tests as Expected
+- **Symptom**: `ASSERT_*` macros fail, but test continues execution, leading to crashes or spurious failures.
+- **Explanation**: Fatal assertion macros (`ASSERT_*`, `FAIL()`) only abort the current *void*-returning function, not the entire test. If used in non-void return types, behavior is undefined.
+
+- **Workarounds**:
+  1. Place fatal assertions only in void functions, such as test bodies or helper functions that return void.
+  2. Use `HasFatalFailure()` to detect and return early from subroutines.
+  3. Use `ASSERT_NO_FATAL_FAILURE()` to ensure no fatal failures occurred in invoked code blocks.
+  4. For exception-enabled builds, consider adding a listener to convert fatal failures into exceptions.
+
+Example:
+
+```cpp
+void Helper() {
+  ASSERT_EQ(1, 2);  // Aborts only this function, not the whole test.
+}
+
+TEST(FooTest, Bar) {
+  Helper();
+  if (HasFatalFailure()) return;  // Return early on failure
+  ...
+}
+```
+
+## 3. Configuration and Environment Issues
+
+### 3.1 Flags and Environment Variables
+- **Symptom**: Unexpected test behavior or output formatting.
+- **Solution**:
+  1. Verify GoogleTest flags such as `--gtest_repeat`, `--gtest_shuffle`, `--gtest_filter`, and `--gtest_output`.
+  2. Use `--gtest_list_tests` to confirm available tests.
+  3. Check environment variables (`GTEST_*`) that may override flag behavior.
+  4. For colorized output issues, confirm `GTEST_COLOR` is set appropriately.
+
+### 3.2 XML or JSON Report Generation Problems
+- **Symptom**: Report files not generated or incorrect.
+- **Solution**:
+  1. Use the `--gtest_output=xml:<file>` or `--gtest_output=json:<file>` flags.
+  2. Ensure write permissions on the output directory.
+  3. Avoid simultaneous runs writing to the same report file.
+
+## 4. Best Practices and Common Pitfalls
+
+- **Naming Conventions**: Append `DeathTest` to test suites containing death tests to inherit correct ordering (run before other tests).
+- **Multiple Death Tests on Same Line**: Avoid multiple `EXPECT_DEATH` or `ASSERT_DEATH` macros on the same source line to prevent compilation errors.
+- **Side Effects in Death Tests**: Side effects in death test child process are not reflected in the parent process. Avoid releasing resources that must persist after the death test.
+- **Avoid Fatal Assertions in Constructors/Destructors**: Place fatal checks in `SetUp`/`TearDown` or test methods instead.
+
+## 5. Troubleshooting Specific Error Types
+
+<AccordionGroup title="Error Categories and Troubleshooting">
+<Accordion title="Build Errors Related to Missing Headers or Libraries">
+Ensure include directories and library paths for GoogleTest are correctly specified in your build system. If using CMake, verify `target_link_libraries` includes `gtest` and `gtest_main`. See [Installation Instructions](getting-started/setup-introduction/installation-instructions) for examples.
+</Accordion>
+<Accordion title="Runtime Failures When Running Tests">
+Check for use of `return` or exceptions inside death test statements; these cause failures. Use recommended death test macros and verify your death test style compatibility. See [Death Tests](overview/concepts/advanced-concepts/death-testing) for detailed explanation.
+</Accordion>
+<Accordion title="Death Tests Fail Due to Regex Mismatch">
+Check that the regex passed to macros like `EXPECT_DEATH` matches any output to stderr exactly as expected. Refer to the supported subset of regex syntax in [Death Tests and Regular Expressions](reference/assertions.md#death). Use simpler regexes initially to isolate issues.
+</Accordion>
+<Accordion title="Tests Not Discovered or Filtered Out Unexpectedly">
+Run the test binary with `--gtest_list_tests` to see all registered tests. Double-check your filters and disabled test prefixes, which exclude tests from execution.
+</Accordion>
+</AccordionGroup>
+
+## 6. Getting Help When Stuck
+
+- Consult the [GoogleTest Primer](getting-started/setup-introduction/prerequisites-requirements) and the [Test Creation](api-reference/core-apis/test-creation) documentation to confirm basic test syntax.
+- Explore related info on [Assertions Reference](api-reference/core-apis/assertions) to understand macros and failure reports.
+- Use the [GoogleTest issue tracker](https://github.com/google/googletest/issues) and community forums for further support.
+
+---
+
+## References and Further Reading
+- [Installation Instructions](getting-started/setup-introduction/installation-instructions)
+- [Death Testing Model](concepts/advanced-concepts/death-testing)
+- [Assertions Reference](api-reference/core-apis/assertions)
+- [First Test Run](getting-started/first-steps-validation/first-test-run)
+- [Core Concepts and Terminology](overview/foundations-and-architecture/core-concepts-and-terminology)
+
+---
+
+### Troubleshooting Tips Summary:
+- Validate your build toolchain and compiler version
+- Follow consistent naming conventions for death tests
+- Use appropriate death test styles
+- Use filters and flags cautiously
+- Avoid fatal assertions in non-void functions
+- Leverage SCOPED_TRACE to debug complex failure locations
+
+For interactive help, consider enabling verbose logging with `--gtest_verbose=1` or adding custom event listeners as per [Extending GoogleTest](overview/foundations-and-architecture/feature-summary).
